2004-08-10  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h: Include <sys/time.h>, thanks to Simon Josefsson.

2004-05-07  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Added GCRYCTL_FAST_POLL.
	(gcry_fast_random_poll): New.
	* global.c (gcry_control) <INITIALIZATION_FINISHED>: Do only basic
	random subsystem init.
	(gcry_control) <FAST_POLL>: New.

2004-04-22  Marcus Brinkmann  <marcus@g10code.de>

	* libgcrypt.m4: Quote first argument to AC_DEFUN.

2004-04-15  Werner Koch  <wk@gnupg.org>

	* secmem.c (_gcry_secmem_malloc_internal): Removed old extra info
	error output.
	(_gcry_secmem_term): Use wipememory2 here.

	* misc.c (_gcry_burn_stack): Use wipememory to avoid optimizations.

	* string.c: Removed.  Was never used.
	* global.c (gcry_strdup): Replaced by the version from string.c
	(gcry_xstrdup): Rewritten.
	* gcrypt.h: Removed duplicate prototype for gcry_strdup.

2004-03-29  Werner Koch  <wk@gnupg.org>

	* secmem.c (_gcry_secmem_realloc): Fixed double unlock; bug
	manifested itself due to the more rigorous checking in the changed
	ath.h

	* libgcrypt-config.in (Options): Ignore the obsolete --threads
	option for now.

2004-03-17  Marcus Brinkmann  <marcus@g10code.de>

	* libgcrypt-config.in (includedir, libdir): Quote'em.  Use
	$gpg_error_cflags and $gpg_error_libs.  Fix construction of
	$includes.

2004-03-14  Marcus Brinkmann  <marcus@g10code.de>

	* libgcrypt-config.in (includedir, libdir): New variables.  For
	--cflags, don't test $cflags.  Also check against /include for the
	GNU/Hurd.  Don't overwrite but extend $cflags_final.  Likewise for
	--libs.

2004-03-10  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (ltlib_libgcrypt_pthread, ltlib_libgcrypt_pth): Removed.
	(lib_LTLIBRARIES): Remove those variables from here.
	(libgcrypt_pthread_la_SOURCES, libgcrypt_pthread_la_LDFLAGS,
	(libgcrypt_pthread_la_DEPENDENCIES, libgcrypt_pthread_la_LIBADD,
	(libgcrypt_pth_la_SOURCES, libgcrypt_pth_la_LDFLAGS,