@@ -1,3 +1,8 @@
+2004-08-18  Moritz Schulte  <moritz@g10code.com>
+
+	* secmem.c (_gcry_secmem_init): Try to lock pool into core not
+	only when running with root privileges.
+
 2004-08-10  Moritz Schulte  <moritz@g10code.com>
 
 	* gcrypt.h: Include <sys/time.h>, thanks to Simon Josefsson.
